Refactor: Made the backup system better so users chose the location.
Signed-off-by: HeCodes2Much <wayne6324@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,6 +96,7 @@
     <string name="settings_others_github">Github</string>
 
     <string name="settings_backups_backup">Backup Preferences</string>
+    <string name="settings_backups_clear">Clear Preferences</string>
     <string name="settings_backups_restore">Restore Preferences</string>
 
     <string name="settings_reload_app_backup">Preferences backed up.</string>
