Lang: Updated Language Files. (#97)
* New translations strings.xml (Czech)

* New translations strings.xml (German)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Czech)

* New translations strings.xml (German)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Ukrainian)

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -80,6 +80,7 @@
     <string name="settings_others_feedback">Rückmeldung</string>
     <string name="settings_others_github">Github</string>
     <string name="settings_backups_backup">Sicherungseinstellungen</string>
+    <string name="settings_backups_clear">Einstellungen löschen</string>
     <string name="settings_backups_restore">Einstellungen wiederherstellen</string>
     <string name="settings_reload_app_backup">Einstellungen gesichert.</string>
     <string name="settings_reload_app_restore">Einstellungen wiederhergestellt. Neustart.</string>
