Feat: Added placeholder text when no fave or hidden apps.
Signed-off-by: HeCodes2Much <wayne6324@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     <string name="favorite_fragment_name">Favorite Apps</string>
     <string name="hidden_fragment_name">Hidden Apps</string>
 
+    <string name="favorite_fragment_no_apps">No Favorite Apps</string>
+    <string name="hidden_fragment_no_apps">No Hidden Apps</string>
+
     <string name="search">Search</string>
 
     <string name="bottom_dialog_app_rename">Rename</string>
