Lang: Updated Language Files. (#98)
* New translations strings.xml (Czech)

* New translations strings.xml (German)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Czech)

* New translations strings.xml (German)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Ukrainian)

* New translations wordoftheday.xml (Czech)

* New translations wordoftheday.xml (German)

* New translations wordoftheday.xml (Hebrew)

* New translations wordoftheday.xml (Italian)

* New translations wordoftheday.xml (Lithuanian)

* New translations wordoftheday.xml (Dutch)

* New translations wordoftheday.xml (Slovak)

* New translations wordoftheday.xml (Ukrainian)

* New translations wordoftheday.xml (Czech)

* New translations wordoftheday.xml (German)

* New translations wordoftheday.xml (Hebrew)

* New translations wordoftheday.xml (Italian)

* New translations wordoftheday.xml (Lithuanian)

* New translations wordoftheday.xml (Dutch)

* New translations wordoftheday.xml (Slovak)

* New translations wordoftheday.xml (Ukrainian)

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -12,6 +12,8 @@
     <!-- Strings used for fragments header labels -->
     <string name="favorite_fragment_name">Lieblings-Apps</string>
     <string name="hidden_fragment_name">Versteckte Apps</string>
+    <string name="favorite_fragment_no_apps">Keine Lieblings-Apps</string>
+    <string name="hidden_fragment_no_apps">Keine versteckten Apps</string>
     <string name="search">Suchen</string>
     <string name="bottom_dialog_app_rename">Umbenennen</string>
     <string name="bottom_dialog_add_to_home">Zum Startbildschirm hinzufügen</string>
