--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -12,6 +12,8 @@
     <!-- Strings used for fragments header labels -->
     <string name="favorite_fragment_name">Oblíbené aplikace</string>
     <string name="hidden_fragment_name">Skryté aplikace</string>
+    <string name="favorite_fragment_no_apps">Žádné oblíbené aplikace</string>
+    <string name="hidden_fragment_no_apps">Žádné skryté aplikace</string>
     <string name="search">Vyhledávání</string>
     <string name="bottom_dialog_app_rename">Přejmenovat</string>
     <string name="bottom_dialog_add_to_home">Přidat na domácí obrazovku</string>
