Lang: Updated Language Files. (#121)
* New translations strings.xml (Czech)

* New translations strings.xml (German)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Turkish)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Czech)

* New translations strings.xml (German)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Turkish)

* New translations strings.xml (Ukrainian)

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -44,6 +44,7 @@
     <string name="settings_display_battery">Akku anzeigen</string>
     <string name="settings_display_daily_word">Wort des Tages anzeigen</string>
     <string name="settings_display_app_icons">App-Symbole anzeigen</string>
+    <string name="settings_display_app_icon_dots">App-Symbole als Punkte anzeigen</string>
     <string name="settings_display_automatic_keyboard">Tastatur automatisch einblenden</string>
     <string name="settings_display_auto_open_apps">Letzte App automatisch öffnen</string>
     <string name="settings_display_lock_settings">Sperreinstellungen</string>
