--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -44,6 +44,7 @@
     <string name="settings_display_battery">הצג סוללה</string>
     <string name="settings_display_daily_word">הצג מילה יומית</string>
     <string name="settings_display_app_icons">הצג סמלי אפליקציה</string>
+    <string name="settings_display_app_icon_dots">הצג סמלי אפליקציה כנקודות</string>
     <string name="settings_display_automatic_keyboard">Auto Show Keyboard</string>
     <string name="settings_display_auto_open_apps">פתח אוטומטית את האפליקציה האחרונה</string>
     <string name="settings_display_lock_settings">הגדרות נעילה</string>
