--- a/app/src/main/res/values-lt-rLT/strings.xml
+++ b/app/src/main/res/values-lt-rLT/strings.xml
@@ -44,6 +44,7 @@
     <string name="settings_display_battery">Rodyti akumuliatorių</string>
     <string name="settings_display_daily_word">Rodyti kasdienį žodį</string>
     <string name="settings_display_app_icons">Rodyti programų piktogramas</string>
+    <string name="settings_display_app_icon_dots">Rodyti programų piktogramas kaip taškus</string>
     <string name="settings_display_automatic_keyboard">Auto Show Keyboard</string>
     <string name="settings_display_auto_open_apps">Automatiškai atidaryti paskutinę programą</string>
     <string name="settings_display_lock_settings">Užrakinimo nustatymai</string>
