--- a/app/src/main/res/values-nl-rNL/strings.xml
+++ b/app/src/main/res/values-nl-rNL/strings.xml
@@ -44,6 +44,7 @@
     <string name="settings_display_battery">Toon batterij</string>
     <string name="settings_display_daily_word">Toon dagelijks woord</string>
     <string name="settings_display_app_icons">App-pictogrammen weergeven</string>
+    <string name="settings_display_app_icon_dots">App-pictogrammen weergeven als stippen</string>
     <string name="settings_display_automatic_keyboard">Toetsenbord voor automatische weergave</string>
     <string name="settings_display_auto_open_apps">Laatste app automatisch openen</string>
     <string name="settings_display_lock_settings">Instellingen vergrendelen</string>
