--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -44,6 +44,7 @@
     <string name="settings_display_battery">Показати батарею</string>
     <string name="settings_display_daily_word">Показати Daily Word</string>
     <string name="settings_display_app_icons">Показати значки програм</string>
+    <string name="settings_display_app_icon_dots">Показувати піктограми додатків у вигляді крапок</string>
     <string name="settings_display_automatic_keyboard">Автоматичне відображення клавіатури</string>
     <string name="settings_display_auto_open_apps">Автоматичне відкриття останньої програми</string>
     <string name="settings_display_lock_settings">Налаштування блокування</string>
