--- a/app/src/main/res/values-da-rDK/strings.xml
+++ b/app/src/main/res/values-da-rDK/strings.xml
@@ -17,7 +17,7 @@
     <string name="search">Søg</string>
     <string name="bottom_dialog_app_rename">Omdøb</string>
     <string name="bottom_dialog_add_to_home">Føj til Startskærm</string>
-    <string name="bottom_dialog_order_home_apps">Bestil Home Apps</string>
+    <string name="bottom_dialog_order_home_apps">Arranger Apps på Startskærm</string>
     <string name="bottom_dialog_remove_from_home">Fjern fra Startskærm</string>
     <string name="bottom_dialog_add_to_hidden">Skjul App</string>
     <string name="bottom_dialog_remove_to_hidden">Fjern Skjult App</string>
@@ -42,17 +42,17 @@
     <string name="settings_display_date">Vis Dato</string>
     <string name="settings_display_time">Vis Tid</string>
     <string name="settings_display_battery">Vis Batteri</string>
-    <string name="settings_display_daily_word">Vis dagligt ord</string>
+    <string name="settings_display_daily_word">Vis Dagligt Ord</string>
     <string name="settings_display_app_icons">Vis App-ikoner</string>
     <string name="settings_display_app_icon_dots">Vis App-ikoner Som Prikker</string>
     <string name="settings_display_automatic_keyboard">Auto-vis Tastatur</string>
-    <string name="settings_display_auto_open_apps">Åbn sidste app automatisk</string>
-    <string name="settings_display_lock_settings">Låseindstillinger</string>
+    <string name="settings_display_auto_open_apps">Auto-åbn Sidste App</string>
+    <string name="settings_display_lock_settings">Lås Indstillinger</string>
     <string name="settings_appearance_text_size_title">Størrelse</string>
     <string name="settings_appearance_color_title">Farve</string>
     <string name="settings_appearance_alignment_title">Justering</string>
-    <string name="settings_appearance_padding_title">Polstring</string>
-    <string name="settings_appearance_wallpaper">Brugerdefineret tapet</string>
+    <string name="settings_appearance_padding_title">Afstand</string>
+    <string name="settings_appearance_wallpaper">Brugerdefineret Baggrund</string>
     <string name="settings_appearance_home_date_alignment">Datojustering</string>
     <string name="settings_appearance_home_time_alignment">Tidsjustering</string>
     <string name="settings_appearance_home_app_alignment">Hjem app justering</string>
@@ -77,14 +77,14 @@
     <string name="settings_swipe_right">Stryg til Højre</string>
     <string name="settings_select_search_engine">Vælg en Søgemaskine</string>
     <string name="settings_search_engine">Søgemaskine</string>
-    <string name="settings_select_launcher_font">Vælg en skrifttypefamilie</string>
+    <string name="settings_select_launcher_font">Vælg en Skrifttypefamilie</string>
     <string name="settings_launcher_font">Skrifttype</string>
     <string name="settings_others_share">Del</string>
     <string name="settings_others_feedback">Feedback</string>
     <string name="settings_others_github">Github</string>
-    <string name="settings_backups_backup">Sikkerhedskopieringsindstillinger</string>
-    <string name="settings_backups_clear">Ryd præferencer</string>
-    <string name="settings_backups_restore">Gendan præferencer</string>
+    <string name="settings_backups_backup">Sikkerhedskopiér Præferencer</string>
+    <string name="settings_backups_clear">Ryd Præferencer</string>
+    <string name="settings_backups_restore">Gendan Præferencer</string>
     <string name="settings_reload_app_backup">Præferencer sikkerhedskopieret.</string>
     <string name="settings_reload_app_restore">Præferencer gendannet. Genstarter.</string>
     <string name="settings_actions_open_app">Åbn App</string>
@@ -97,7 +97,7 @@
     <string name="settings_actions_open_quick_settings">Åbn Hurtigindstillinger</string>
     <string name="settings_actions_show_recents">Vis Seneste</string>
     <string name="settings_actions_show_widgets">Vis Widgets</string>
-    <string name="settings_actions_open_power_dialog">Åbn Power Dialog</string>
+    <string name="settings_actions_open_power_dialog">Åbn Strømdialog</string>
     <string name="settings_actions_take_a_screenshot">Tag et Skærmbillede</string>
     <string name="settings_actions_disabled">Handicappet</string>
     <string name="settings_units_metric">Metrisk</string>
