--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,9 +87,6 @@
     <string name="settings_title_home_display_preferences">Display</string>
     <string name="settings_title_home_behavior_preferences">Behavior</string>
     <string name="settings_title_home_appearance_preferences">Appearance</string>
-    <string name="settings_title_date_style">Date Style</string>
-    <string name="settings_title_time_style">Time Style</string>
-    <string name="settings_title_app_manager">App Manage</string>
     <string name="settings_title_gestures">Gestures</string>
     <string name="settings_title_miscellaneous">Miscellaneous</string>
     <string name="settings_title_others">Others</string>
@@ -111,14 +108,9 @@
     <string name="settings_appearance_padding_title">Padding</string>
     <string name="settings_appearance_wallpaper">Custom Wallpaper</string>
 
-    <string name="settings_appearance_home_date_alignment">Date Alignment</string>
-    <string name="settings_appearance_home_time_alignment">Time Alignment</string>
-    <string name="settings_appearance_home_app_alignment">Home App Alignment</string>
 
-    <string name="appearance_bottom_dialog_text_size_title">Size</string>
     <string name="appearance_bottom_dialog_text_color_title">Color</string>
     <string name="appearance_bottom_dialog_alignment_title">Alignment</string>
-    <string name="appearance_bottom_dialog_padding_title">Padding</string>
     <string name="appearance_bottom_dialog_desc_date">Date\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_time">Time\u0020:\u0020 </string>
     <string name="appearance_bottom_dialog_desc_app">App\u0020:\u0020</string>
@@ -128,7 +120,6 @@
     <string name="appearance_bottom_dialog_desc_widget_background">Widget Background\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_widget_text">Widget Text\u0020:\u0020</string>
 
-    <string name="settings_select_wallpaper">Select Wallpaper</string>
     <string name="settings_double_tap">Double Tap</string>
     <string name="settings_swipe_up">Swipe Up</string>
     <string name="settings_swipe_down">Swipe Down</string>
@@ -140,10 +131,6 @@
 
     <string name="settings_select_launcher_font">Select a Font Family</string>
     <string name="settings_launcher_font">Font Family</string>
-
-    <string name="settings_others_share">Share</string>
-    <string name="settings_others_feedback">Feedback</string>
-    <string name="settings_others_github">Github</string>
 
     <string name="settings_reload_app_backup">Preferences backed up.</string>
     <string name="settings_reload_app_restore">Preferences restored. Restarting.</string>
@@ -174,19 +161,14 @@
     <string name="authentication_failed">Authentication Failed</string>
     <string name="authentication_error">Authentication Error: %1$s(code %2$d)</string>
 
-    <string name="bottom_alignment_star">Star</string>
-    <string name="bottom_alignment_center">Center</string>
-    <string name="bottom_alignment_end">End</string>
-
     <string name="accessibility_settings_title">Accessibility Settings</string>
     <string name="accessibility_settings_enable">Enable</string>
     <string name="accessibility_settings_disable">Disable</string>
 
     <string name="accessibility_service_name">Easy Launcher Actions Service</string>
-    <string name="accessibility_service_desc">Please turn on accessibility service to use double tap to lock feature in Easy Launcher.\n\nThis permission is used only to turn off your screen.Our accessibility service does not collect or share any data.</string>
-    <string name="admin_permission_message">Easy launcher promises to use lock screen permission responsibly. Easy launcher does not collect or share any data.</string>
+    <string name="accessibility_service_desc">Please turn on accessibility service to use double tap to lock feature in Easy Launcher.\n\nThis permission is used only to turn off your screen. Our
+        accessibility service does not collect or share any data.</string>
 
-    <string name="search_engine">Search Engine</string>
     <string name="search_default">Default</string>
     <string name="search_google">Google</string>
     <string name="search_yahoo">Yahoo</string>
